LESSON-15-Istio/deploymentdockerhub-services-2version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitocr-service-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: digitocr-service
      version: v1
  template:
    metadata:
      labels:
        app: digitocr-service
        version: v1
    spec:
      containers:
      - name: digitocr-service
        image: magnesiumwalrus/digitocr-api-service:1.0
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digitocr-service-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: digitocr-service
      version: v2
  template:
    metadata:
      labels:
        app: digitocr-service
        version: v2
    spec:
      containers:
      - name: digitocr-service
        image: magnesiumwalrus/digitocr-api-service:2.0
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: digitocr-service
spec:
  selector:
    app: digitocr-service
  ports:
  - protocol: TCP
    port: 8000
    name: http
    targetPort: 80
  type: ClusterIP
---
