LESSON-15-Istio/route-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: digitocr-service
spec:
  hosts:
    - digitocr-service
  http:
  - route:
    - destination:
        host: digitocr-service
        subset: v1
      weight: 90
    - destination:
        host: digitocr-service
        subset: v2
      weight: 10
